# ludi

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: basic_arithmetic.ludi
interpreter/: Cargo.toml  README.md
interpreter/src/: array.rs  datatypes.rs  function.rs  globals.rs  interpret.rs  lib.rs  main.rs  ops.rs  parser.rs  repl.rs  run.rs  scanner.rs
interpreter/tests/: array_test.rs  interpret_test.rs  parser_test.rs
libludi/: Cargo.toml
libludi/src/: allocator.rs  array.rs  ast.rs  atomic.rs  branch.rs  codegen.rs  compile.rs  data.rs  dialect.rs  env.rs  err.rs  fn.rs  lex.rs  lib.rs  normalize.rs  ops.rs  parser.rs  pipeline.rs  scanner.rs  shape.rs  token.rs  tokens.rs  transform.rs  typecheck.rs  types.rs  utils.rs
libludi/src/codegen/: codewriter.rs  dialect.rs  mod.rs  types.rs  writer.rs
libludi/src/optimize/: mod.rs  normalize.rs
libludi/tests/: array_test.rs  codegen_test.rs  melior_test.rs  normalize_test.rs  parser_test.rs  types_test.rs
libludi/tests/mlir_tests/: diff_of_squares.mlir  loop_fusion.mlir  main.rs  sum_buffer.mlir
ludic/: Cargo.toml
ludic/src/: cli.rs  main.rs  pipeline.rs
shvm/: Cargo.toml  README.md  build.rs
shvm/src/: dialect.rs  hwquery.rs  lib.rs  main.rs  ops.rs  vm.rs
shvm/src/ods/: dialect.td
shvm/tests/: mlir_test.rs  vm_test.rs
