[package]
name = "shvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libludi={path="../libludi/"}
melior = { version = "0.18.5", features = ["ods-dialects"], path="../../melior/melior" }
tblgen = { version = "0.3.6", features = ["llvm18-0"], default-features = false, package="tblgen-alt", path = "../../tblgen-rs-alt" }
libc = "0.2.155"
bytemuck = {version="1.16.1", features = ["aarch64_simd"]}
